@@ -55,171 +55,169 @@ import org.opensearch.client.indices.CreateIndexRequest;
 
 class IndexingClientTest {
 
-    public static final int
-            SET_OF_RESOURCES_THAT_DO_NOT_FIT_EXACTLY_IN_THE_BULK_SIZE_OF_A_BULK_REQUEST = 1256;
-    public static final IndexResponse UNUSED_INDEX_RESPONSE = null;
-    private RestHighLevelClientWrapper esClient;
-    private IndexingClient indexingClient;
-    private AtomicReference<IndexRequest> submittedIndexRequest;
+  public static final int
+      SET_OF_RESOURCES_THAT_DO_NOT_FIT_EXACTLY_IN_THE_BULK_SIZE_OF_A_BULK_REQUEST = 1256;
+  public static final IndexResponse UNUSED_INDEX_RESPONSE = null;
+  private RestHighLevelClientWrapper esClient;
+  private IndexingClient indexingClient;
+  private AtomicReference<IndexRequest> submittedIndexRequest;
 
-    private CachedJwtProvider cachedJwtProvider;
+  private CachedJwtProvider cachedJwtProvider;
 
-    @BeforeEach
-    public void init() throws IOException {
-        cachedJwtProvider = setupMockedCachedJwtProvider();
-        esClient = setupMockEsClient();
-        indexingClient = new IndexingClient(esClient, cachedJwtProvider);
-        submittedIndexRequest = new AtomicReference<>();
-    }
+  @BeforeEach
+  public void init() throws IOException {
+    cachedJwtProvider = setupMockedCachedJwtProvider();
+    esClient = setupMockEsClient();
+    indexingClient = new IndexingClient(esClient, cachedJwtProvider);
+    submittedIndexRequest = new AtomicReference<>();
+  }
 
-    @Test
-    void constructorWithSecretsReaderDefinedShouldCreateInstance() {
-        var secretsReaderMock = mock(SecretsReader.class);
-        var testCredentials = new UsernamePasswordWrapper("user", "password");
-        when(secretsReaderMock.fetchClassSecret(anyString(), eq(UsernamePasswordWrapper.class)))
-                .thenReturn(testCredentials);
+  @Test
+  void constructorWithSecretsReaderDefinedShouldCreateInstance() {
+    var secretsReaderMock = mock(SecretsReader.class);
+    var testCredentials = new UsernamePasswordWrapper("user", "password");
+    when(secretsReaderMock.fetchClassSecret(anyString(), eq(UsernamePasswordWrapper.class)))
+        .thenReturn(testCredentials);
 
-        IndexingClient indexingClient = IndexingClient.prepareWithSecretReader(secretsReaderMock);
-        assertNotNull(indexingClient);
-    }
+    IndexingClient indexingClient = IndexingClient.prepareWithSecretReader(secretsReaderMock);
+    assertNotNull(indexingClient);
+  }
 
-    @Test
-    void shouldIndexAllDocumentsInBatchInBulksOfSpecifiedSize() throws IOException {
-        var indexDocuments =
-                IntStream.range(
-                                0,
-                                SET_OF_RESOURCES_THAT_DO_NOT_FIT_EXACTLY_IN_THE_BULK_SIZE_OF_A_BULK_REQUEST)
-                        .boxed()
-                        .map(i -> randomJson())
-                        .map(this::toIndexDocument)
-                        .toList();
-        List<BulkResponse> provokeExecution =
-                indexingClient.batchInsert(indexDocuments.stream()).collect(Collectors.toList());
-        assertThat(provokeExecution, is(not(nullValue())));
+  @Test
+  void shouldIndexAllDocumentsInBatchInBulksOfSpecifiedSize() throws IOException {
+    var indexDocuments =
+        IntStream.range(
+                0, SET_OF_RESOURCES_THAT_DO_NOT_FIT_EXACTLY_IN_THE_BULK_SIZE_OF_A_BULK_REQUEST)
+            .boxed()
+            .map(i -> randomJson())
+            .map(this::toIndexDocument)
+            .toList();
+    List<BulkResponse> provokeExecution =
+        indexingClient.batchInsert(indexDocuments.stream()).collect(Collectors.toList());
+    assertThat(provokeExecution, is(not(nullValue())));
 
-        int expectedNumberOfBulkRequests =
-                (int) Math.ceil(((double) indexDocuments.size()) / ((double) BULK_SIZE));
-        verify(esClient, times(expectedNumberOfBulkRequests))
-                .bulk(any(BulkRequest.class), any(RequestOptions.class));
-    }
+    int expectedNumberOfBulkRequests =
+        (int) Math.ceil(((double) indexDocuments.size()) / ((double) BULK_SIZE));
+    verify(esClient, times(expectedNumberOfBulkRequests))
+        .bulk(any(BulkRequest.class), any(RequestOptions.class));
+  }
 
-    @Test
-    void shouldSendIndexRequestWithIndexNameSpecifiedByIndexDocument() throws IOException {
-        var indexDocument = sampleIndexDocument();
-        var expectedIndex = indexDocument.consumptionAttributes().index();
-        indexingClient.addDocumentToIndex(indexDocument);
+  @Test
+  void shouldSendIndexRequestWithIndexNameSpecifiedByIndexDocument() throws IOException {
+    var indexDocument = sampleIndexDocument();
+    var expectedIndex = indexDocument.consumptionAttributes().index();
+    indexingClient.addDocumentToIndex(indexDocument);
 
-        assertThat(submittedIndexRequest.get().index(), is(equalTo(expectedIndex)));
-        assertThat(
-                extractDocumentFromSubmittedIndexRequest(), is(equalTo(indexDocument.resource())));
-    }
+    assertThat(submittedIndexRequest.get().index(), is(equalTo(expectedIndex)));
+    assertThat(extractDocumentFromSubmittedIndexRequest(), is(equalTo(indexDocument.resource())));
+  }
 
-    @Test
-    void shouldCallEsClientCreateIndexRequest() throws IOException {
-        IndicesClient indicesClient = mock(IndicesClient.class);
-        var indicesClientWrapper = new IndicesClientWrapper(indicesClient);
-        when(esClient.indices()).thenReturn(indicesClientWrapper);
-        indexingClient.createIndex(randomString());
-        var expectedNumberOfCreateInvocationsToEs = 1;
-        verify(indicesClient, times(expectedNumberOfCreateInvocationsToEs))
-                .create(any(CreateIndexRequest.class), any(RequestOptions.class));
-    }
+  @Test
+  void shouldCallEsClientCreateIndexRequest() throws IOException {
+    IndicesClient indicesClient = mock(IndicesClient.class);
+    var indicesClientWrapper = new IndicesClientWrapper(indicesClient);
+    when(esClient.indices()).thenReturn(indicesClientWrapper);
+    indexingClient.createIndex(randomString());
+    var expectedNumberOfCreateInvocationsToEs = 1;
+    verify(indicesClient, times(expectedNumberOfCreateInvocationsToEs))
+        .create(any(CreateIndexRequest.class), any(RequestOptions.class));
+  }
 
-    @Test
-    void shouldThrowExceptionWhenEsClientFailedToCreateIndex() throws IOException {
-        var expectedErrorMessage = randomString();
-        var indicesClientWrapper = createMockIndicesClientWrapper();
-        when(esClient.indices()).thenReturn(indicesClientWrapper);
-        when(indicesClientWrapper.create(any(CreateIndexRequest.class), any(RequestOptions.class)))
-                .thenThrow(new IOException(expectedErrorMessage));
-        Executable createIndexAction = () -> indexingClient.createIndex(randomString());
-        var actualException = assertThrows(IOException.class, createIndexAction);
-        assertThat(actualException.getMessage(), containsString(expectedErrorMessage));
-    }
+  @Test
+  void shouldThrowExceptionWhenEsClientFailedToCreateIndex() throws IOException {
+    var expectedErrorMessage = randomString();
+    var indicesClientWrapper = createMockIndicesClientWrapper();
+    when(esClient.indices()).thenReturn(indicesClientWrapper);
+    when(indicesClientWrapper.create(any(CreateIndexRequest.class), any(RequestOptions.class)))
+        .thenThrow(new IOException(expectedErrorMessage));
+    Executable createIndexAction = () -> indexingClient.createIndex(randomString());
+    var actualException = assertThrows(IOException.class, createIndexAction);
+    assertThat(actualException.getMessage(), containsString(expectedErrorMessage));
+  }
 
-    @Test
-    void shouldThrowExceptionContainingTheCauseWhenIndexDocumentFailsToBeIndexed()
-            throws IOException {
-        String expectedMessage = randomString();
-        esClient = mock(RestHighLevelClientWrapper.class);
-        when(esClient.index(any(IndexRequest.class), any(RequestOptions.class)))
-                .thenThrow(new IOException(expectedMessage));
+  @Test
+  void shouldThrowExceptionContainingTheCauseWhenIndexDocumentFailsToBeIndexed()
+      throws IOException {
+    String expectedMessage = randomString();
+    esClient = mock(RestHighLevelClientWrapper.class);
+    when(esClient.index(any(IndexRequest.class), any(RequestOptions.class)))
+        .thenThrow(new IOException(expectedMessage));
 
-        indexingClient = new IndexingClient(esClient, cachedJwtProvider);
+    indexingClient = new IndexingClient(esClient, cachedJwtProvider);
 
-        Executable indexingAction = () -> indexingClient.addDocumentToIndex(sampleIndexDocument());
-        var exception = assertThrows(IOException.class, indexingAction);
-        assertThat(exception.getMessage(), containsString(expectedMessage));
-    }
+    Executable indexingAction = () -> indexingClient.addDocumentToIndex(sampleIndexDocument());
+    var exception = assertThrows(IOException.class, indexingAction);
+    assertThat(exception.getMessage(), containsString(expectedMessage));
+  }
 
-    @Test
-    void shouldNotThrowExceptionWhenTryingToDeleteNonExistingDocument() throws IOException {
-        RestHighLevelClientWrapper restHighLevelClient = mock(RestHighLevelClientWrapper.class);
-        DeleteResponse nothingFoundResponse = mock(DeleteResponse.class);
-        when(nothingFoundResponse.getResult()).thenReturn(DocWriteResponse.Result.NOT_FOUND);
-        when(restHighLevelClient.delete(any(), any())).thenReturn(nothingFoundResponse);
-        IndexingClient indexingClient = new IndexingClient(restHighLevelClient, cachedJwtProvider);
-        assertDoesNotThrow(() -> indexingClient.removeDocumentFromResourcesIndex("1234"));
-    }
+  @Test
+  void shouldNotThrowExceptionWhenTryingToDeleteNonExistingDocument() throws IOException {
+    RestHighLevelClientWrapper restHighLevelClient = mock(RestHighLevelClientWrapper.class);
+    DeleteResponse nothingFoundResponse = mock(DeleteResponse.class);
+    when(nothingFoundResponse.getResult()).thenReturn(DocWriteResponse.Result.NOT_FOUND);
+    when(restHighLevelClient.delete(any(), any())).thenReturn(nothingFoundResponse);
+    IndexingClient indexingClient = new IndexingClient(restHighLevelClient, cachedJwtProvider);
+    assertDoesNotThrow(() -> indexingClient.removeDocumentFromResourcesIndex("1234"));
+  }
 
-    @Test
-    void shouldNotThrowExceptionWhenTryingToDeleteNonExistingDocumentFromImportCandidateIndex()
-            throws IOException {
-        RestHighLevelClientWrapper restHighLevelClient = mock(RestHighLevelClientWrapper.class);
-        DeleteResponse nothingFoundResponse = mock(DeleteResponse.class);
-        when(nothingFoundResponse.getResult()).thenReturn(DocWriteResponse.Result.NOT_FOUND);
-        when(restHighLevelClient.delete(any(), any())).thenReturn(nothingFoundResponse);
-        IndexingClient indexingClient = new IndexingClient(restHighLevelClient, cachedJwtProvider);
-        assertDoesNotThrow(() -> indexingClient.removeDocumentFromImportCandidateIndex("1234"));
-    }
+  @Test
+  void shouldNotThrowExceptionWhenTryingToDeleteNonExistingDocumentFromImportCandidateIndex()
+      throws IOException {
+    RestHighLevelClientWrapper restHighLevelClient = mock(RestHighLevelClientWrapper.class);
+    DeleteResponse nothingFoundResponse = mock(DeleteResponse.class);
+    when(nothingFoundResponse.getResult()).thenReturn(DocWriteResponse.Result.NOT_FOUND);
+    when(restHighLevelClient.delete(any(), any())).thenReturn(nothingFoundResponse);
+    IndexingClient indexingClient = new IndexingClient(restHighLevelClient, cachedJwtProvider);
+    assertDoesNotThrow(() -> indexingClient.removeDocumentFromImportCandidateIndex("1234"));
+  }
 
-    @Test
-    void shouldCallEsClientDeleteIndexRequest() throws IOException {
-        var indicesClient = mock(IndicesClient.class);
-        var indicesClientWrapper = new IndicesClientWrapper(indicesClient);
-        when(esClient.indices()).thenReturn(indicesClientWrapper);
-        indexingClient.deleteIndex(randomString());
-        var expectedNumberOfCreateInvocationsToEs = 1;
-        verify(indicesClient, times(expectedNumberOfCreateInvocationsToEs))
-                .delete(any(DeleteIndexRequest.class), any(RequestOptions.class));
-    }
+  @Test
+  void shouldCallEsClientDeleteIndexRequest() throws IOException {
+    var indicesClient = mock(IndicesClient.class);
+    var indicesClientWrapper = new IndicesClientWrapper(indicesClient);
+    when(esClient.indices()).thenReturn(indicesClientWrapper);
+    indexingClient.deleteIndex(randomString());
+    var expectedNumberOfCreateInvocationsToEs = 1;
+    verify(indicesClient, times(expectedNumberOfCreateInvocationsToEs))
+        .delete(any(DeleteIndexRequest.class), any(RequestOptions.class));
+  }
 
-    private IndicesClientWrapper createMockIndicesClientWrapper() {
-        IndicesClient indicesClient = mock(IndicesClient.class);
-        return new IndicesClientWrapper(indicesClient);
-    }
+  private IndicesClientWrapper createMockIndicesClientWrapper() {
+    IndicesClient indicesClient = mock(IndicesClient.class);
+    return new IndicesClientWrapper(indicesClient);
+  }
 
-    private RestHighLevelClientWrapper setupMockEsClient() throws IOException {
-        var esClient = mock(RestHighLevelClientWrapper.class);
-        when(esClient.index(any(IndexRequest.class), any(RequestOptions.class)))
-                .thenAnswer(
-                        invocation -> {
-                            var indexRequest = (IndexRequest) invocation.getArgument(0);
-                            submittedIndexRequest.set(indexRequest);
-                            return UNUSED_INDEX_RESPONSE;
-                        });
-        return esClient;
-    }
+  private RestHighLevelClientWrapper setupMockEsClient() throws IOException {
+    var esClient = mock(RestHighLevelClientWrapper.class);
+    when(esClient.index(any(IndexRequest.class), any(RequestOptions.class)))
+        .thenAnswer(
+            invocation -> {
+              var indexRequest = (IndexRequest) invocation.getArgument(0);
+              submittedIndexRequest.set(indexRequest);
+              return UNUSED_INDEX_RESPONSE;
+            });
+    return esClient;
+  }
 
-    private IndexDocument sampleIndexDocument() {
-        EventConsumptionAttributes consumptionAttributes =
-                new EventConsumptionAttributes(randomString(), SortableIdentifier.next());
-        return new IndexDocument(consumptionAttributes, sampleJsonObject());
-    }
+  private IndexDocument sampleIndexDocument() {
+    EventConsumptionAttributes consumptionAttributes =
+        new EventConsumptionAttributes(randomString(), SortableIdentifier.next());
+    return new IndexDocument(consumptionAttributes, sampleJsonObject());
+  }
 
-    private JsonNode sampleJsonObject() {
-        return attempt(() -> dtoObjectMapper.readTree(randomJson())).orElseThrow();
-    }
+  private JsonNode sampleJsonObject() {
+    return attempt(() -> dtoObjectMapper.readTree(randomJson())).orElseThrow();
+  }
 
-    private IndexDocument toIndexDocument(String jsonString) {
-        var consumptionAttributes =
-                new EventConsumptionAttributes(randomString(), SortableIdentifier.next());
-        var json = attempt(() -> objectMapperWithEmpty.readTree(jsonString)).orElseThrow();
-        return new IndexDocument(consumptionAttributes, json);
-    }
+  private IndexDocument toIndexDocument(String jsonString) {
+    var consumptionAttributes =
+        new EventConsumptionAttributes(randomString(), SortableIdentifier.next());
+    var json = attempt(() -> objectMapperWithEmpty.readTree(jsonString)).orElseThrow();
+    return new IndexDocument(consumptionAttributes, json);
+  }
 
-    private JsonNode extractDocumentFromSubmittedIndexRequest() throws JsonProcessingException {
-        return objectMapperWithEmpty.readTree(
-                submittedIndexRequest.get().source().toBytesRef().utf8ToString());
-    }
+  private JsonNode extractDocumentFromSubmittedIndexRequest() throws JsonProcessingException {
+    return objectMapperWithEmpty.readTree(
+        submittedIndexRequest.get().source().toBytesRef().utf8ToString());
+  }
 }
